# ConsoleWeather

./: CMakeLists.txt  config.json  main.cpp
visualisation/: CMakeLists.txt  constants.h  visualisation.cpp  visualisation.h
wether/: CMakeLists.txt  Weather_Information.cpp  Weather_Information.h
